Added NSMicrophoneUsageDescription key to Info.plist and Readme to enable recording on a physical iPhone

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>Record samples</string>
 </dict>
 </plist>
