--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,6 +4,7 @@ description: Demonstrates how to use the audio_recorder plugin.
 dependencies:
   flutter:
     sdk: flutter
+  path_provider:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
