--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   path_provider: ^0.4.1
 
 environment:
-  sdk: ">=1.8.0 <2.0.0"
+  sdk: ">=2.0.0-dev.40.0.flutter-f981f09760 <3.0.0"
 
 
 # For information on the generic Dart part of this file, see the
