--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
 dev_dependencies:
   audio_recorder:
     path: ../
-
+  flutter_test:
+    sdk: flutter
+  test: ^0.12.37
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
