--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_script:
   - flutter doctor
   - gem install coveralls-lcov
 script:
-  - flutter test --coverage
+  - script/runTests.sh
 after_success:
-  - coveralls-lcov coverage/lcov.info
+  - coveralls-lcov lcov.info
 cache:
   directories:
     - $HOME/.pub-cache
