--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,20 +4,15 @@ description: Demonstrates how to use the audio_recorder plugin.
 dependencies:
   flutter:
     sdk: flutter
-  path_provider:
+  path_provider: ^1.1.0
   file: ^5.0.4
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
 
 dev_dependencies:
   audio_recorder:
     path: ../
   flutter_test:
     sdk: flutter
-  test: ^1.3.0
-  mockito: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
