--- a/example/.gitignore
+++ b/example/.gitignore
@@ -61,6 +61,7 @@
 **/ios/Flutter/flutter_assets/
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Flutter
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
