Fix failed build
Build failed because of duplicated file META-INF/proguard/androidx-annotations.pro

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -48,6 +48,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 flutter {
