--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,47 @@
 .DS_Store
 .atom/
-.idea
+.idea/
+.vscode/
+
 .packages
 .pub/
-build/
-ios/.generated/
-packages
+.dart_tool/
 pubspec.lock
+flutter_export_environment.sh
 
-\.vscode/
+examples/all_plugins/pubspec.yaml
 
-android/\.classpath
+Podfile
+Podfile.lock
+Pods/
+.symlinks/
+**/Flutter/App.framework/
+**/Flutter/ephemeral/
+**/Flutter/Flutter.framework/
+**/Flutter/Generated.xcconfig
+**/Flutter/flutter_assets/
 
-android/\.project
+ServiceDefinitions.json
+xcuserdata/
+**/DerivedData/
 
-android/\.settings/org\.eclipse\.buildship\.core\.prefs
+local.properties
+keystore.properties
+.gradle/
+gradlew
+gradlew.bat
+gradle-wrapper.jar
+.flutter-plugins-dependencies
+*.iml
 
-# coverage
-coverage
-lcov.info
+generated_plugin_registrant.dart
+GeneratedPluginRegistrant.h
+GeneratedPluginRegistrant.m
+GeneratedPluginRegistrant.java
+GeneratedPluginRegistrant.swift
+build/
+.flutter-plugins
+
+.project
+.classpath
+.settings
