--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,16 @@ version: 1.1.0
 homepage: https://github.com/ZaraclaJ/audio_recorder
 
 dependencies:
-  path: ^1.6.4
+  path: ^1.8.0
   flutter:
     sdk: flutter
-  file: ^5.1.0
+  file: ^6.1.1
 
 
 environment:
-  sdk: ">=2.0.0-dev.28.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.6 <2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.4"
+
 
 flutter:
   plugin:
@@ -22,5 +23,8 @@ flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.14.4
-  path_provider: ^1.6.10
+  test: ^1.16.6
+  path_provider: ^2.0.0
+
+dependency_override:
+  test_api: 0.2.20
