--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,6 @@ dependencies:
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=2.0.4"
 
 
 flutter:
@@ -26,5 +25,5 @@ dev_dependencies:
   test: ^1.16.6
   path_provider: ^2.0.0
 
-dependency_override:
-  test_api: 0.2.20
+dependency_overrides:
+  test_api: ^0.2.20
