--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
 
 
 environment:
-  sdk: ">=2.0.0-dev.40.0.flutter-f981f09760 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 flutter:
   plugin:
